# robo-hasbi

./: .dockerignore  .gitignore  .rarreg.key  .replit  Dockerfile  Procfile  README.md  bot.py  loker.py  loker_formatter.py  loker_raw_text.txt  ping.py  pyproject.toml  rclone.conf  requirements.txt  robi.py  robi_request.py  robiconf.rar  robo-hasbi.sql
archived_cogs/: game.py  misc.py  template.py
cogs/: aki.py  card.py  corona.py  currency.py  dm.py  error_handling.py  event.py  hentai.py  imgur.py  kepolisian.py  misc.py  pixiv.py  qrcode.py  reddit.py  sauce.py  setting.py  settings.py  sk.py  wibu.py
configuration/: __init__.py
discord_message_components/: __init__.py  client.py  components.py  http.py  override.py  receive.py  tools.py
discord_message_components/slash/: http.py  types.py
discord_ui/: __init__.py  client.py  components.py  errors.py  http.py  override.py  receive.py  tools.py
discord_ui/slash/: errors.py  http.py  tools.py  types.py
helpers/: __init__.py  akinator_helpers.py  exceptions.py  hentai_helpers.py  kbbi.py  ping.py  pixiv_helpers.py  ready_message_helpers.py  reddit_helpers.py  sambung_kata_helpers.py  sauce_helpers.py  ui.py
legacy-robi/: .gitignore  kbbi.py  requirements.txt  robi.py
legacy-robi/archived_cogs/: misc.py  settings.py
legacy-robi/cogs/: currency.py  dm.py  event.py  hentai.py  qrcode.py  reddit.py  wibu.py
legacy-robi/configuration/: __init__.py
storage/: kata-dasar-indonesia.txt  kuki_kbbi.json  ready_message.json  setting.json
webhooks/: loker.py
