[tool.poetry]
name = "repl_python3_beta_robo-hasbi"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
discord = "^1.0.1"
imgurpython = "^1.1.7"
praw = "^7.1.0"
prawcore = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
