[tool.poetry]
name = "robo_hasbi"
version = "0.1.0"
description = ""
authors = "Digibit Team"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
discord = "^1.0.1"
imgurpython = "^1.1.7"
praw = "^7.1.0"
prawcore = "^1.5.0"
flask = "^1.1.2"
myqr = "^2.3.1"
appdirs = "^1.4.4"
bs4 = "^0.0.1"
cloudscraper = "^1.2.58"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"